[tool.poetry]
name = "currency-exchange"
version = "0.1.0"
description = ""
authors = ["vitayushchyk <vitay2715@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
#fastapi = {extras = ["all"], version = "^0.108.0"}
requests = "^2.31.0"
pymongo = "^4.6.1"
fastapi = "^0.109.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
httpx = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
